Bug 1579929: When a reflow is interrupted, don't purge flex item measurements until the next time they're needed in a later non-interrupted reflow. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D53313